# opentracingrust

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  Readme.md
examples/: 0-quickstart.rs  1-custom-tracer.rs  2-threads.rs
src/: carrier.rs  errors.rs  lib.rs  span.rs  tracer.rs
src/span/: log.rs  mod.rs  tag.rs
src/span_context/: baggage.rs  impl_context.rs  mod.rs
src/tracers/: file.rs  mod.rs  noop.rs  null.rs
src/utils/: fail.rs  global_tracer.rs  mod.rs  reporter.rs
