[package]
name = "opentracingrust"
version = "0.3.4" # Remember to update html_root_url
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "opentracing.io library for rust"
documentation = "https://docs.rs/opentracingrust/"
homepage = "https://github.com/stefano-pogliani/opentracingrust"
repository = "https://github.com/stefano-pogliani/opentracingrust"
readme = "Readme.md"
keywords = ["opentracing", "tracing"]
license = "MIT"

[dependencies]
crossbeam-channel = "^0.3.8"
rand = "^0.6.5"
