[package]
name = "opentracingrust"
version = "0.4.0" # Remember to update html_root_url
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "opentracing.io library for rust"
documentation = "https://docs.rs/opentracingrust/"
homepage = "https://github.com/stefano-pogliani/opentracingrust"
repository = "https://github.com/stefano-pogliani/opentracingrust"
readme = "Readme.md"
keywords = ["opentracing", "tracing"]
license = "MIT"

[dependencies]
crossbeam-channel = "^0.4.2"
rand = "^0.7.3"
